// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MAR-387 — golden journey (mechanical client, always picks ⭐) > competitor_price_monitor > matches the golden transcript snapshot 1`] = `
{
  "final_goal": "[text]",
  "fixture": "competitor_price_monitor",
  "initial_goal": "[text]",
  "steps": [
    {
      "clarifying_question_ids": [],
      "coverage_label": "full",
      "kind": "plan",
      "plan_source": "playbook",
      "recommended_next_click": {
        "action": "see:goal_to_product_wizard.recommended_setup",
        "id": "prepare_runtime",
        "label": "[text]",
      },
      "round": 0,
      "route": [
        "scheduled_trigger",
        "page_monitor",
        "deduplication",
        "schema_validation",
        "threshold_router",
        "reviewer_notification",
        "state_store",
        "auth_failure_handler",
        "slack_notification",
        "audit_log",
      ],
      "route_status": "validated",
    },
    {
      "durable_build_goal": true,
      "honest_disclosure": true,
      "kind": "attended_dry_run_option",
      "present": true,
      "walking_skeleton_disclosed": true,
    },
    {
      "kind": "terminal:prepare_runtime",
      "next_achievable_step": "[text]",
      "recommended_setup_availability": "requires setup",
      "recommended_setup_label": "Prepare runtime and connections",
      "runtime_class": "managed_scheduled_job",
    },
  ],
  "terminal": "prepare_runtime",
  "transcript_version": "orchestratekit.golden_journey.v1",
}
`;

exports[`MAR-387 — golden journey (mechanical client, always picks ⭐) > golden_email_calendar > matches the golden transcript snapshot 1`] = `
{
  "final_goal": "[text]",
  "fixture": "golden_email_calendar",
  "initial_goal": "[text]",
  "steps": [
    {
      "clarifying_question_ids": [
        "calendar_notification",
      ],
      "coverage_label": "full",
      "kind": "plan",
      "plan_source": "playbook",
      "recommended_next_click": {
        "action": "assistant:ask_clarifying_questions",
        "id": "answer_clarifying_questions",
        "label": "Answer the quick questions",
      },
      "round": 0,
      "route": [
        "email_read",
        "calendar_lookup",
        "intent_classifier",
        "email_draft",
        "human_approval_gate",
        "calendar_write",
        "gmail_draft_write",
        "audit_log",
      ],
      "route_status": "validated",
    },
    {
      "canned_answer": "[text]",
      "kind": "answer_clarifying_question",
      "question_id": "calendar_notification",
    },
    {
      "clarifying_question_ids": [],
      "coverage_label": "partial",
      "kind": "plan",
      "plan_source": "composed",
      "recommended_next_click": {
        "action": "see:goal_to_product_wizard.recommended_setup",
        "id": "prepare_runtime",
        "label": "[text]",
      },
      "round": 1,
      "route": [
        "email_read",
        "calendar_lookup",
        "schema_validation",
        "threshold_router",
        "email_draft",
        "auth_failure_handler",
        "human_approval_gate",
        "calendar_write",
        "gmail_draft_write",
        "audit_log",
      ],
      "route_status": "candidate",
    },
    {
      "durable_build_goal": true,
      "honest_disclosure": true,
      "kind": "attended_dry_run_option",
      "present": true,
      "walking_skeleton_disclosed": true,
    },
    {
      "kind": "terminal:prepare_runtime",
      "next_achievable_step": "[text]",
      "recommended_setup_availability": "requires setup",
      "recommended_setup_label": "Prepare runtime and connections",
      "runtime_class": "managed_durable_background",
    },
  ],
  "terminal": "prepare_runtime",
  "transcript_version": "orchestratekit.golden_journey.v1",
}
`;

exports[`MAR-387 — golden journey (mechanical client, always picks ⭐) > one_shot_inbox_summary > matches the golden transcript snapshot 1`] = `
{
  "final_goal": "summarize my inbox for me now",
  "fixture": "one_shot_inbox_summary",
  "initial_goal": "summarize my inbox for me now",
  "steps": [
    {
      "clarifying_question_ids": [],
      "coverage_label": "full",
      "kind": "plan",
      "plan_source": "composed",
      "recommended_next_click": {
        "action": "export_build_brief({ handoff_targets: ['prompt'], delivery_mode: 'compact' })",
        "id": "build_brief",
        "label": "Export Build brief for Codex",
      },
      "round": 0,
      "route": [
        "email_read",
        "research_synthesis",
        "citation_checker",
        "source_freshness_check",
      ],
      "route_status": "candidate",
    },
    {
      "durable_build_goal": false,
      "honest_disclosure": true,
      "kind": "attended_dry_run_option",
      "present": true,
      "walking_skeleton_disclosed": false,
    },
    {
      "all_sections_non_empty": true,
      "brief_markdown_non_empty": true,
      "kind": "terminal:build_brief",
      "llm_provider": "deterministic_first",
      "sections_present": [
        "s0_constraints",
        "s1_summary",
        "s2_route",
        "s3_worker_contracts",
        "s4_loop_contract",
        "s5_safety",
        "s6_do_not_add",
        "s7_review_loopback",
        "s8_definition_of_done",
        "s9_observability",
        "s11_connect",
      ],
    },
  ],
  "terminal": "build_brief",
  "transcript_version": "orchestratekit.golden_journey.v1",
}
`;
